--- a/.gitconfig
+++ b/.gitconfig
@@ -20,7 +20,11 @@
     # diff: `git di $number` shows the diff between the state `$number` revisions ago and the current state
     di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
     # log
-    l = log
+    l = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset'
+    # graphical representation for all refs      
+    lga = !git l --graph --all
+    # graphical representation for branches only         
+    lgb = !git l --graph --branches
     # pull
     pl = pull
     # pull including all submodules
