--- a/.gitconfig
+++ b/.gitconfig
@@ -104,11 +104,16 @@
 # personal details
 
 [user]
-    email = hjrnunes@gmail.com
-    name = Henrique Nunes
+	email = hjrnunes@gmail.com
+	name = Henrique Nunes
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
