--- a/.gitconfig
+++ b/.gitconfig
@@ -54,6 +54,7 @@
     # treat spaces before tabs, lines that are indented with 8 or more spaces, and all kinds of trailing whitespace as an error
     whitespace = space-before-tab, trailing-space
 	editor = nano
+	autocrlf = input
 
 [color]
     ui = auto
